log
Sun, Mar 23, 2025  1:22:19 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025 12:05:24 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:16: error: statement with no effect [-Werror=unused-value]
     list->head == NULL;
                ^
list.c:34:16: error: statement with no effect [-Werror=unused-value]
     list->tail == NULL;
                ^
list.c:35:19: error: statement with no effect [-Werror=unused-value]
     list->current == NULL;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
1d286ec
